# CourseProject

./: .clang-format  .clang-tidy  .clangd  .gitignore  .prettierrc  ARCHITECTURE.md  CMakeLists.txt  README.md  imgui.ini
include/: FeatureBase.hpp  FeatureExtractors.hpp  FilterBase.hpp  Filters.hpp  Logger.hpp  Pipeline.hpp  PointCloudIO.hpp
src/: FeatureExtractors.cpp  Filters.cpp  Logger.cpp  Pipeline.cpp  PointCloudIO.cpp  main.cpp  main.cpp.bak
